C/src/syntax/parser.output
State 26 conflicts: 3 shift/reduce
State 31 conflicts: 3 shift/reduce
State 35 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 107 conflicts: 11 shift/reduce
State 138 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList ASSIGNOP Exp SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | ε

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB FLOAT RB
   21       | VarDec LB INT RB RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP ParamDec COMMA RP
   25       | ID LP VarList COMMA RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC

   30 StmtList: Stmt StmtList
   31         | ε

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | WHILE LP Exp RP SEMI
   39     | RETURN SEMI
   40     | Specifier DecList SEMI
   41     | error SEMI

   42 DefList: Def DefList
   43        | ε

   44 Def: Specifier DecList SEMI
   45    | Specifier SEMI
   46    | error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp
   51    | VarDec ASSIGNOP LC Args RC
   52    | VarDec ASSIGNOP LC RC

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | ID LP Exp COMMA RP
   67    | Exp LB Exp RB
   68    | Exp DOT ID
   69    | Exp DOT
   70    | Exp COMPOUND_ASSIGN Exp
   71    | ID
   72    | INT
   73    | FLOAT

   74 Args: Exp COMMA Args
   75     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 41 46
    INT <tok> (258) 19 21 72
    FLOAT <tok> (259) 20 73
    ID <tok> (260) 15 17 18 22 23 24 25 64 65 66 68 71
    TYPE <tok> (261) 11
    SEMI <tok> (262) 4 5 7 8 32 34 38 39 40 41 44 45 46
    COMMA <tok> (263) 10 24 25 26 48 66 74
    ASSIGNOP <tok> (264) 7 50 51 52 53
    RELOP <tok> (265) 56
    PLUS <tok> (266) 57
    MINUS <tok> (267) 58 62
    STAR <tok> (268) 59
    DIV <tok> (269) 60
    AND <tok> (270) 54
    OR <tok> (271) 55
    DOT <tok> (272) 68 69
    NOT <tok> (273) 63
    STRUCT <tok> (274) 13 14
    RETURN <tok> (275) 34 39
    IF <tok> (276) 35 36
    ELSE <tok> (277) 36
    WHILE <tok> (278) 37 38
    LP <tok> (279) 22 23 24 25 35 36 37 38 61 64 65 66
    RP <tok> (280) 22 23 24 25 35 36 37 38 61 64 65 66
    LB <tok> (281) 19 20 21 67
    RB <tok> (282) 19 20 21 67
    LC <tok> (283) 13 29 51 52
    RC <tok> (284) 13 29 51 52
    COMPOUND_ASSIGN <tok> (285) 70
    UMINUS (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (35)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList <node> (36)
        on left: 9 10
        on right: 4 7 10
    Specifier <node> (37)
        on left: 11 12
        on right: 4 5 6 7 28 40 44 45
    StructSpecifier <node> (38)
        on left: 13 14
        on right: 12
    OptTag <node> (39)
        on left: 15 16
        on right: 13
    Tag <node> (40)
        on left: 17
        on right: 14
    VarDec <node> (41)
        on left: 18 19 20 21
        on right: 9 10 19 20 21 28 49 50 51 52
    FunDec <node> (42)
        on left: 22 23 24 25
        on right: 6
    VarList <node> (43)
        on left: 26 27
        on right: 22 25 26
    ParamDec <node> (44)
        on left: 28
        on right: 24 26 27
    CompSt <node> (45)
        on left: 29
        on right: 6 33
    StmtList <node> (46)
        on left: 30 31
        on right: 29 30
    Stmt <node> (47)
        on left: 32 33 34 35 36 37 38 39 40 41
        on right: 30 35 36 37
    DefList <node> (48)
        on left: 42 43
        on right: 13 29 42
    Def <node> (49)
        on left: 44 45 46
        on right: 42
    DecList <node> (50)
        on left: 47 48
        on right: 40 44 48
    Dec <node> (51)
        on left: 49 50 51 52
        on right: 47 48
    Exp <node> (52)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 7 32 34 35 36 37 38 50 53 54 55 56 57 58 59 60 61 62 63 66 67 68 69 70 74 75
    Args <node> (53)
        on left: 74 75
        on right: 51 64 74


State 0

    0 $accept: • Program $end
    1 Program: • ExtDefList
    2 ExtDefList: • ExtDef ExtDefList
    3           | ε •  [$end]
    4 ExtDef: • Specifier ExtDecList SEMI
    5       | • Specifier SEMI
    6       | • Specifier FunDec CompSt
    7       | • Specifier ExtDecList ASSIGNOP Exp SEMI
    8       | • error SEMI
   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT OptTag LC DefList RC
   14                | • STRUCT Tag

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE •

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT • OptTag LC DefList RC
   14                | STRUCT • Tag
   15 OptTag: • ID
   16       | ε •  [LC]
   17 Tag: • ID

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: • ExtDef ExtDefList
    2           | ExtDef • ExtDefList
    3           | ε •  [$end]
    4 ExtDef: • Specifier ExtDecList SEMI
    5       | • Specifier SEMI
    6       | • Specifier FunDec CompSt
    7       | • Specifier ExtDecList ASSIGNOP Exp SEMI
    8       | • error SEMI
   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT OptTag LC DefList RC
   14                | • STRUCT Tag

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • ExtDecList ASSIGNOP Exp SEMI
    9 ExtDecList: • VarDec
   10           | • VarDec COMMA ExtDecList
   18 VarDec: • ID
   19       | • VarDec LB INT RB
   20       | • VarDec LB FLOAT RB
   21       | • VarDec LB INT RB RB
   22 FunDec: • ID LP VarList RP
   23       | • ID LP RP
   24       | • ID LP ParamDec COMMA RP
   25       | • ID LP VarList COMMA RP

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   12 Specifier: StructSpecifier •

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 10

   15 OptTag: ID •  [LC]
   17 Tag: ID •  [ID, SEMI]

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 20


State 12

   14 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end •

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 15

   18 VarDec: ID •  [SEMI, COMMA, ASSIGNOP, LB]
   22 FunDec: ID • LP VarList RP
   23       | ID • LP RP
   24       | ID • LP ParamDec COMMA RP
   25       | ID • LP VarList COMMA RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


State 16

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList • SEMI
    7       | Specifier ExtDecList • ASSIGNOP Exp SEMI

    SEMI      shift, and go to state 22
    ASSIGNOP  shift, and go to state 23


State 18

    9 ExtDecList: VarDec •  [SEMI, ASSIGNOP]
   10           | VarDec • COMMA ExtDecList
   19 VarDec: VarDec • LB INT RB
   20       | VarDec • LB FLOAT RB
   21       | VarDec • LB INT RB RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec • CompSt
   29 CompSt: • LC DefList StmtList RC

    LC  shift, and go to state 26

    CompSt  go to state 27


State 20

   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT OptTag LC DefList RC
   13                | STRUCT OptTag LC • DefList RC
   14                | • STRUCT Tag
   42 DefList: • Def DefList
   43        | ε •  [RC]
   44 Def: • Specifier DecList SEMI
   45    | • Specifier SEMI
   46    | • error SEMI

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 21

   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT OptTag LC DefList RC
   14                | • STRUCT Tag
   22 FunDec: ID LP • VarList RP
   23       | ID LP • RP
   24       | ID LP • ParamDec COMMA RP
   25       | ID LP • VarList COMMA RP
   26 VarList: • ParamDec COMMA VarList
   27        | • ParamDec
   28 ParamDec: • Specifier VarDec

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 32

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 22

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 23

    7 ExtDef: Specifier ExtDecList ASSIGNOP • Exp SEMI
   53 Exp: • Exp ASSIGNOP Exp
   54    | • Exp AND Exp
   55    | • Exp OR Exp
   56    | • Exp RELOP Exp
   57    | • Exp PLUS Exp
   58    | • Exp MINUS Exp
   59    | • Exp STAR Exp
   60    | • Exp DIV Exp
   61    | • LP Exp RP
   62    | • MINUS Exp
   63    | • NOT Exp
   64    | • ID LP Args RP
   65    | • ID LP RP
   66    | • ID LP Exp COMMA RP
   67    | • Exp LB Exp RB
   68    | • Exp DOT ID
   69    | • Exp DOT
   70    | • Exp COMPOUND_ASSIGN Exp
   71    | • ID
   72    | • INT
   73    | • FLOAT

    INT    shift, and go to state 36
    FLOAT  shift, and go to state 37
    ID     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40
    LP     shift, and go to state 41

    Exp  go to state 42


State 24

    9 ExtDecList: • VarDec
   10           | • VarDec COMMA ExtDecList
   10           | VarDec COMMA • ExtDecList
   18 VarDec: • ID
   19       | • VarDec LB INT RB
   20       | • VarDec LB FLOAT RB
   21       | • VarDec LB INT RB RB

    ID  shift, and go to state 43

    ExtDecList  go to state 44
    VarDec      go to state 18


State 25

   19 VarDec: VarDec LB • INT RB
   20       | VarDec LB • FLOAT RB
   21       | VarDec LB • INT RB RB

    INT    shift, and go to state 45
    FLOAT  shift, and go to state 46


State 26

   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT OptTag LC DefList RC
   14                | • STRUCT Tag
   29 CompSt: LC • DefList StmtList RC
   42 DefList: • Def DefList
   43        | ε •  [error, INT, FLOAT, ID, TYPE, MINUS, NOT, STRUCT, RETURN, IF, WHILE, LP, LC, RC]
   44 Def: • Specifier DecList SEMI
   45    | • Specifier SEMI
   46    | • error SEMI

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    TYPE    [reduce using rule 43 (DefList)]
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    STRUCT  [reduce using rule 43 (DefList)]
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 31

    shift/reduce conflict on token TYPE:
       43 DefList: ε •
       11 Specifier: • TYPE
      Example: LC • TYPE DecList SEMI StmtList RC
      Shift derivation
        CompSt
        ↳ 29: LC DefList                                       StmtList RC
                 ↳ 42: Def                             DefList
                       ↳ 44: Specifier    DecList SEMI ↳ 42: ε
                             ↳ 11: • TYPE
      Reduce derivation
        CompSt
        ↳ 29: LC DefList   StmtList                                     RC
                 ↳ 43: ε • ↳ 30: Stmt                          StmtList
                                 ↳ 40: Specifier  DecList SEMI
                                       ↳ 11: TYPE

    shift/reduce conflict on token STRUCT:
       43 DefList: ε •
       13 StructSpecifier: • STRUCT OptTag LC DefList RC
      First example: • STRUCT LC RC DecList SEMI StmtList RC
      Shift derivation
        CompSt
        ↳ 29: DefList                                                                     StmtList RC
              ↳ 42: Def                                                           DefList
                    ↳ 44: Specifier                                  DecList SEMI ↳ 42: ε
                          ↳ 12: StructSpecifier
                                ↳ 13: • STRUCT OptTag  LC DefList RC
                                               ↳ 13: ε    ↳ 13: ε
      Second example: DecList SEMI DecList SEMI StmtList RC
      Reduce derivation
        CompSt
        ↳ 29: DecList SEMI StmtList                          RC
                           ↳ 30: Stmt               StmtList
                                 ↳ 40: DecList SEMI

    shift/reduce conflict on token STRUCT:
       43 DefList: ε •
       14 StructSpecifier: • STRUCT Tag
      Example: LC • STRUCT Tag DecList SEMI StmtList RC
      Shift derivation
        CompSt
        ↳ 29: LC DefList                                                   StmtList RC
                 ↳ 42: Def                                         DefList
                       ↳ 44: Specifier                DecList SEMI ↳ 42: ε
                             ↳ 12: StructSpecifier
                                   ↳ 14: • STRUCT Tag
      Reduce derivation
        CompSt
        ↳ 29: LC DefList   StmtList                                                 RC
                 ↳ 43: ε • ↳ 30: Stmt                                      StmtList
                                 ↳ 40: Specifier              DecList SEMI
                                       ↳ 12: StructSpecifier
                                             ↳ 14: STRUCT Tag

    shift/reduce conflict on token error:
       43 DefList: ε •
       46 Def: • error SEMI
      Example: LC • error SEMI StmtList RC
      Shift derivation
        CompSt
        ↳ 29: LC DefList                          StmtList RC
                 ↳ 42: Def                DefList
                       ↳ 46: • error SEMI ↳ 42: ε
      Reduce derivation
        CompSt
        ↳ 29: LC DefList   StmtList                        RC
                 ↳ 43: ε • ↳ 30: Stmt             StmtList
                                 ↳ 41: error SEMI



State 27

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 28

   46 Def: error • SEMI

    SEMI  shift, and go to state 48


State 29

   18 VarDec: • ID
   19       | • VarDec LB INT RB
   20       | • VarDec LB FLOAT RB
   21       | • VarDec LB INT RB RB
   44 Def: Specifier • DecList SEMI
   45    | Specifier • SEMI
   47 DecList: • Dec
   48        | • Dec COMMA DecList
   49 Dec: • VarDec
   50    | • VarDec ASSIGNOP Exp
   51    | • VarDec ASSIGNOP LC Args RC
   52    | • VarDec ASSIGNOP LC RC

    ID    shift, and go to state 43
    SEMI  shift, and go to state 49

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 30

   13 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 53


State 31

   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT OptTag LC DefList RC
   14                | • STRUCT Tag
   42 DefList: • Def DefList
   42        | Def • DefList
   43        | ε •  [error, INT, FLOAT, ID, TYPE, MINUS, NOT, STRUCT, RETURN, IF, WHILE, LP, LC, RC]
   44 Def: • Specifier DecList SEMI
   45    | • Specifier SEMI
   46    | • error SEMI

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    TYPE    [reduce using rule 43 (DefList)]
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    STRUCT  [reduce using rule 43 (DefList)]
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 31

    shift/reduce conflict on token TYPE:
       43 DefList: ε •
       11 Specifier: • TYPE
      First example: Specifier FunDec Def • TYPE DecList SEMI DefList DefList StmtList RC ExtDefList $end
      Shift derivation
        $accept
        ↳ 0: Program                                                                                                                      $end
             ↳ 1: ExtDefList
                  ↳ 2: ExtDef                                                                                                  ExtDefList
                       ↳ 6: Specifier FunDec CompSt
                                             ↳ 29: DefList                                                 DefList StmtList RC
                                                   ↳ 42: Def DefList
                                                             ↳ 42: Def                             DefList
                                                                   ↳ 44: Specifier    DecList SEMI
                                                                         ↳ 11: • TYPE
      Second example: Specifier FunDec LC Def • TYPE DecList SEMI StmtList RC ExtDefList $end
      Reduce derivation
        $accept
        ↳ 0: Program                                                                                                                 $end
             ↳ 1: ExtDefList
                  ↳ 2: ExtDef                                                                                             ExtDefList
                       ↳ 6: Specifier FunDec CompSt
                                             ↳ 29: LC DefList             StmtList                                     RC
                                                      ↳ 42: Def DefList   ↳ 30: Stmt                          StmtList
                                                                ↳ 43: ε •       ↳ 40: Specifier  DecList SEMI
                                                                                      ↳ 11: TYPE

    shift/reduce conflict on token STRUCT:
       43 DefList: ε •
       13 StructSpecifier: • STRUCT OptTag LC DefList RC
      First example: Specifier FunDec Def • STRUCT OptTag LC DefList RC DecList SEMI DefList DefList StmtList RC ExtDefList $end
      Shift derivation
        $accept
        ↳ 0: Program                                                                                                                                                   $end
             ↳ 1: ExtDefList
                  ↳ 2: ExtDef                                                                                                                               ExtDefList
                       ↳ 6: Specifier FunDec CompSt
                                             ↳ 29: DefList                                                                              DefList StmtList RC
                                                   ↳ 42: Def DefList
                                                             ↳ 42: Def                                                          DefList
                                                                   ↳ 44: Specifier                                 DecList SEMI
                                                                         ↳ 12: StructSpecifier
                                                                               ↳ 13: • STRUCT OptTag LC DefList RC
      Second example: Specifier FunDec LC Def • STRUCT OptTag LC DefList RC DecList SEMI StmtList RC ExtDefList $end
      Reduce derivation
        $accept
        ↳ 0: Program                                                                                                                                              $end
             ↳ 1: ExtDefList
                  ↳ 2: ExtDef                                                                                                                          ExtDefList
                       ↳ 6: Specifier FunDec CompSt
                                             ↳ 29: LC DefList             StmtList                                                                  RC
                                                      ↳ 42: Def DefList   ↳ 30: Stmt                                                       StmtList
                                                                ↳ 43: ε •       ↳ 40: Specifier                               DecList SEMI
                                                                                      ↳ 12: StructSpecifier
                                                                                            ↳ 13: STRUCT OptTag LC DefList RC

    shift/reduce conflict on token STRUCT:
       43 DefList: ε •
       14 StructSpecifier: • STRUCT Tag
      First example: Specifier FunDec Def • STRUCT Tag DecList SEMI DefList DefList StmtList RC ExtDefList $end
      Shift derivation
        $accept
        ↳ 0: Program                                                                                                                                  $end
             ↳ 1: ExtDefList
                  ↳ 2: ExtDef                                                                                                              ExtDefList
                       ↳ 6: Specifier FunDec CompSt
                                             ↳ 29: DefList                                                             DefList StmtList RC
                                                   ↳ 42: Def DefList
                                                             ↳ 42: Def                                         DefList
                                                                   ↳ 44: Specifier                DecList SEMI
                                                                         ↳ 12: StructSpecifier
                                                                               ↳ 14: • STRUCT Tag
      Second example: Specifier FunDec LC Def • STRUCT OptTag LC DefList RC DecList SEMI StmtList RC ExtDefList $end
      Reduce derivation
        $accept
        ↳ 0: Program                                                                                                                                              $end
             ↳ 1: ExtDefList
                  ↳ 2: ExtDef                                                                                                                          ExtDefList
                       ↳ 6: Specifier FunDec CompSt
                                             ↳ 29: LC DefList             StmtList                                                                  RC
                                                      ↳ 42: Def DefList   ↳ 30: Stmt                                                       StmtList
                                                                ↳ 43: ε •       ↳ 40: Specifier                               DecList SEMI
                                                                                      ↳ 12: StructSpecifier
                                                                                            ↳ 13: STRUCT OptTag LC DefList RC

    shift/reduce conflict on token error:
       43 DefList: ε •
       46 Def: • error SEMI
      First example: Specifier FunDec Def • error SEMI DefList DefList StmtList RC ExtDefList $end
      Shift derivation
        $accept
        ↳ 0: Program                                                                                                         $end
             ↳ 1: ExtDefList
                  ↳ 2: ExtDef                                                                                     ExtDefList
                       ↳ 6: Specifier FunDec CompSt
                                             ↳ 29: DefList                                    DefList StmtList RC
                                                   ↳ 42: Def DefList
                                                             ↳ 42: Def                DefList
                                                                   ↳ 46: • error SEMI
      Second example: Specifier FunDec LC Def • error SEMI StmtList RC ExtDefList $end
      Reduce derivation
        $accept
        ↳ 0: Program                                                                                                    $end
             ↳ 1: ExtDefList
                  ↳ 2: ExtDef                                                                                ExtDefList
                       ↳ 6: Specifier FunDec CompSt
                                             ↳ 29: LC DefList             StmtList                        RC
                                                      ↳ 42: Def DefList   ↳ 30: Stmt             StmtList
                                                                ↳ 43: ε •       ↳ 41: error SEMI



State 32

   23 FunDec: ID LP RP •

    $default  reduce using rule 23 (FunDec)


State 33

   18 VarDec: • ID
   19       | • VarDec LB INT RB
   20       | • VarDec LB FLOAT RB
   21       | • VarDec LB INT RB RB
   28 ParamDec: Specifier • VarDec

    ID  shift, and go to state 43

    VarDec  go to state 55


State 34

   22 FunDec: ID LP VarList • RP
   25       | ID LP VarList • COMMA RP

    COMMA  shift, and go to state 56
    RP     shift, and go to state 57


State 35

   24 FunDec: ID LP ParamDec • COMMA RP
   26 VarList: ParamDec • COMMA VarList
   27        | ParamDec •  [COMMA, RP]

    COMMA  shift, and go to state 58

    COMMA     [reduce using rule 27 (VarList)]
    $default  reduce using rule 27 (VarList)

    shift/reduce conflict on token COMMA:
       27 VarList: ParamDec •
       24 FunDec: ID LP ParamDec • COMMA RP
      Example: ID LP ParamDec • COMMA RP
      Shift derivation
        FunDec
        ↳ 24: ID LP ParamDec • COMMA RP
      Reduce derivation
        FunDec
        ↳ 25: ID LP VarList          COMMA RP
                    ↳ 27: ParamDec •

    shift/reduce conflict on token COMMA:
       27 VarList: ParamDec •
       26 VarList: ParamDec • COMMA VarList
      First example: Specifier ID LP ParamDec • COMMA VarList RP CompSt $end
      Shift derivation
        $accept
        ↳ 0: Program                                                                  $end
             ↳ 1: ExtDef
                  ↳ 6: Specifier FunDec                                        CompSt
                                 ↳ 22: ID LP VarList                        RP
                                             ↳ 26: ParamDec • COMMA VarList
      Second example: Specifier ID LP ParamDec • COMMA RP CompSt ExtDefList $end
      Reduce derivation
        $accept
        ↳ 0: Program                                                                          $end
             ↳ 1: ExtDefList
                  ↳ 2: ExtDef                                                      ExtDefList
                       ↳ 6: Specifier FunDec                                CompSt
                                      ↳ 25: ID LP VarList          COMMA RP
                                                  ↳ 27: ParamDec •



State 36

   72 Exp: INT •

    $default  reduce using rule 72 (Exp)


State 37

   73 Exp: FLOAT •

    $default  reduce using rule 73 (Exp)


State 38

   64 Exp: ID • LP Args RP
   65    | ID • LP RP
   66    | ID • LP Exp COMMA RP
   71    | ID •  [SEMI, COMMA, ASSIGNOP, RELOP, PLUS, MINUS, STAR, DIV, AND, OR, DOT, RP, LB, RB, RC, COMPOUND_ASSIGN]

    LP  shift, and go to state 59

    $default  reduce using rule 71 (Exp)


State 39

   53 Exp: • Exp ASSIGNOP Exp
   54    | • Exp AND Exp
   55    | • Exp OR Exp
   56    | • Exp RELOP Exp
   57    | • Exp PLUS Exp
   58    | • Exp MINUS Exp
   59    | • Exp STAR Exp
   60    | • Exp DIV Exp
   61    | • LP Exp RP
   62    | • MINUS Exp
   62    | MINUS • Exp
   63    | • NOT Exp
   64    | • ID LP Args RP
   65    | • ID LP RP
   66    | • ID LP Exp COMMA RP
   67    | • Exp LB Exp RB
   68    | • Exp DOT ID
   69    | • Exp DOT
   70    | • Exp COMPOUND_ASSIGN Exp
   71    | • ID
   72    | • INT
   73    | • FLOAT

    INT    shift, and go to state 36
    FLOAT  shift, and go to state 37
    ID     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40
    LP     shift, and go to state 41

    Exp  go to state 60


State 40

   53 Exp: • Exp ASSIGNOP Exp
   54    | • Exp AND Exp
   55    | • Exp OR Exp
   56    | • Exp RELOP Exp
   57    | • Exp PLUS Exp
   58    | • Exp MINUS Exp
   59    | • Exp STAR Exp
   60    | • Exp DIV Exp
   61    | • LP Exp RP
   62    | • MINUS Exp
   63    | • NOT Exp
   63    | NOT • Exp
   64    | • ID LP Args RP
   65    | • ID LP RP
   66    | • ID LP Exp COMMA RP
   67    | • Exp LB Exp RB
   68    | • Exp DOT ID
   69    | • Exp DOT
   70    | • Exp COMPOUND_ASSIGN Exp
   71    | • ID
   72    | • INT
   73    | • FLOAT

    INT    shift, and go to state 36
    FLOAT  shift, and go to state 37
    ID     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40
    LP     shift, and go to state 41

    Exp  go to state 61


State 41

   53 Exp: • Exp ASSIGNOP Exp
   54    | • Exp AND Exp
   55    | • Exp OR Exp
   56    | • Exp RELOP Exp
   57    | • Exp PLUS Exp
   58    | • Exp MINUS Exp
   59    | • Exp STAR Exp
   60    | • Exp DIV Exp
   61    | • LP Exp RP
   61    | LP • Exp RP
   62    | • MINUS Exp
   63    | • NOT Exp
   64    | • ID LP Args RP
   65    | • ID LP RP
   66    | • ID LP Exp COMMA RP
   67    | • Exp LB Exp RB
   68    | • Exp DOT ID
   69    | • Exp DOT
   70    | • Exp COMPOUND_ASSIGN Exp
   71    | • ID
   72    | • INT
   73    | • FLOAT
